unlinkify stories site

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <section class="section">
 	<div class="container">
 	  <table class="table is-bordered is-hoverable">
-	    <tr><td><a href='https://stories.earthmoonstars.space/2023-05-07/'>Earth Moon Stars Space Art Journal</a></td></tr>
+	    <tr><td>Earth Moon Stars Space Art Journal - not currently a standalone server, see wiki pages instead</td></tr>
 	  </table>
 	</div>
       </section>
